# money-maker

./: .gitignore  Cargo.toml  README.md  dashboard.json  optimize_kernel.sh  prometheus.yml  setup_vps.sh  visor.json
config/: visor.json
python/: data_miner.py  main.py  model.py  requirements.txt  strategy.py  train.py
scripts/: setup_vps.sh
src/: execution.rs  ipc.rs  main.rs  metrics.rs  orderbook.rs  strategy.rs  types.rs  websocket.rs
